--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="container"> 
           
           <!-- Logo -->
-          <div class="logo"><a href="index.html" id="logo">sdsdsds</a></div>
+          <div class="logo"><a href="index.html" id="logo"></a></div>
           <!-- Menu -->
           <div class="menu_main">
             <div class="navbar yamm navbar-default">
