--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     </li>
                     <li>
                       <a target="_blank" href="https://twitter.com/codelayers"
-                        ><i class="fa fa-twitter"></i
+                        ><i style="color: white" class="fa fa-twitter"></i
                       ></a>
                     </li>
                     <li>
@@ -414,7 +414,7 @@
                                     </li>
                                     <li>
                                       <a href="social-icons.html"
-                                        ><i class="fa fa-twitter"></i> &nbsp;
+                                        ><i style="color: white;" class="fa fa-twitter"></i> &nbsp;
                                         Social Icons</a
                                       >
                                     </li>
@@ -1564,7 +1564,7 @@
                       </li>
                       <li class="iconbg active">
                         <a target="_blank" href="https://twitter.com/codelayers"
-                          ><i class="fa fa-twitter"></i
+                          ><i style="color: white" class="fa fa-twitter"></i
                         ></a>
                       </li>
                       <li class="iconbg">
@@ -1634,7 +1634,7 @@
                       </li>
                       <li class="iconbg active">
                         <a target="_blank" href="https://twitter.com/codelayers"
-                          ><i class="fa fa-twitter"></i
+                          ><i style="color: white;" class="fa fa-twitter"></i
                         ></a>
                       </li>
                       <li class="iconbg">
@@ -1704,7 +1704,7 @@
                       </li>
                       <li class="iconbg active">
                         <a target="_blank" href="https://twitter.com/codelayers"
-                          ><i class="fa fa-twitter"></i
+                          ><i style="color: white;" class="fa fa-twitter"></i
                         ></a>
                       </li>
                       <li class="iconbg">
@@ -1986,7 +1986,7 @@
                           <a
                             target="_blank"
                             href="https://twitter.com/codelayers"
-                            ><i class="fa fa-twitter"></i
+                            ><i style="color: white" class="fa fa-twitter"></i
                           ></a>
                         </li>
                         <li class="three">
@@ -2025,7 +2025,7 @@
                           <a
                             target="_blank"
                             href="https://twitter.com/codelayers"
-                            ><i class="fa fa-twitter"></i
+                            ><i style="color: white" class="fa fa-twitter"></i
                           ></a>
                         </li>
                         <li class="three">
@@ -2035,7 +2035,9 @@
                     </div>
                     <div class="top_line"></div>
                     <div class="member_info">
-                      <h5 class="lessmar">Jessica Christopher</h5>
+                      <h5 style="color: black" class="lessmar">
+                        Jessica Christopher
+                      </h5>
                       <span>Developer </span>
                     </div>
                   </div>
@@ -2064,7 +2066,7 @@
                           <a
                             target="_blank"
                             href="https://twitter.com/codelayers"
-                            ><i class="fa fa-twitter"></i
+                            ><i style="color: white" class="fa fa-twitter"></i
                           ></a>
                         </li>
                         <li class="three">
@@ -2106,7 +2108,7 @@
                           <a
                             target="_blank"
                             href="https://twitter.com/codelayers"
-                            ><i class="fa fa-twitter"></i
+                            ><i style="color: white" class="fa fa-twitter"></i
                           ></a>
                         </li>
                         <li class="three">
@@ -2145,7 +2147,7 @@
                           <a
                             target="_blank"
                             href="https://twitter.com/codelayers"
-                            ><i class="fa fa-twitter"></i
+                            ><i style="color: white" class="fa fa-twitter"></i
                           ></a>
                         </li>
                         <li class="three">
@@ -2184,7 +2186,7 @@
                           <a
                             target="_blank"
                             href="https://twitter.com/codelayers"
-                            ><i class="fa fa-twitter"></i
+                            ><i style="color: white" class="fa fa-twitter"></i
                           ></a>
                         </li>
                         <li class="three">
@@ -2967,7 +2969,7 @@
                     target="_blank"
                     href="https://twitter.com/codelayers"
                     class="active"
-                    ><i class="fa fa-twitter"></i
+                    ><i style="color: white;" class="fa fa-twitter"></i
                   ></a>
                 </li>
                 <li>
