--- a/index.html
+++ b/index.html
@@ -414,8 +414,11 @@
                                     </li>
                                     <li>
                                       <a href="social-icons.html"
-                                        ><i style="color: white;" class="fa fa-twitter"></i> &nbsp;
-                                        Social Icons</a
+                                        ><i
+                                          style="color: white"
+                                          class="fa fa-twitter"
+                                        ></i>
+                                        &nbsp; Social Icons</a
                                       >
                                     </li>
                                   </ul>
@@ -1336,16 +1339,15 @@
                   ></span>
                 </div>
               </div>
-              <h5 class="padd_top6 lessmar"><strong>Animation</strong></h5>
+              <h5 style="color: black" class="padd_top6 lessmar">
+                <strong>Image & Budding Professional</strong>
+              </h5>
               <div class="title_bottom_line"></div>
               <div class="clearfix"></div>
-              <p>
-                Lorem Ipsum is simply sit typesetting amet et text of sit amet
-                theprinting sit.
-              </p>
+              <p>Student in their final sems</p>
               <br />
               <br />
-              <a href="#" class="readmore">Read more...</a>
+              <a href="#" class="readmore">Know more...</a>
             </div>
           </div>
           <!--end item-->
@@ -1361,16 +1363,15 @@
                   ></span>
                 </div>
               </div>
-              <h5 class="padd_top6 lessmar"><strong>Web Develop</strong></h5>
+              <h5 style="color: black" class="padd_top6 lessmar">
+                <strong>Young Professional</strong>
+              </h5>
               <div class="title_bottom_line"></div>
               <div class="clearfix"></div>
-              <p>
-                Lorem Ipsum is simply sit typesetting amet et text of sit amet
-                theprinting sit.
-              </p>
+              <p>Exe with 1-5 year work ex</p>
               <br />
               <br />
-              <a href="#" class="readmore">Read more...</a>
+              <a href="#" class="readmore">Know more...</a>
             </div>
           </div>
           <!--end item-->
@@ -1387,16 +1388,15 @@
                   ></span>
                 </div>
               </div>
-              <h5 class="padd_top6 lessmar"><strong>Graphic Desogn</strong></h5>
+              <h5 style="color: black" class="padd_top6 lessmar">
+                <strong>Management Professional</strong>
+              </h5>
               <div class="title_bottom_line"></div>
               <div class="clearfix"></div>
-              <p>
-                Lorem Ipsum is simply sit typesetting amet et text of sit amet
-                theprinting sit.
-              </p>
+              <p>Ex with 5 - 10 year of work exp</p>
               <br />
               <br />
-              <a href="#" class="readmore">Read more...</a>
+              <a href="#" class="readmore">Know more...</a>
             </div>
           </div>
           <!--end item-->
@@ -1412,24 +1412,89 @@
                   ></span>
                 </div>
               </div>
-              <h5 class="padd_top6 lessmar">
-                <strong>Excellent Support</strong>
+              <h5 style="color: black" class="padd_top6 lessmar">
+                <strong>Mid Management Professional</strong>
               </h5>
               <div class="title_bottom_line"></div>
               <div class="clearfix"></div>
-              <p>
-                Lorem Ipsum is simply sit typesetting amet et text of sit amet
-                theprinting sit.
-              </p>
+              <p>Ex with 10 year bless exp</p>
               <br />
               <br />
-              <a href="#" class="readmore">Read more...</a>
+              <a href="#" class="readmore">Know more...</a>
             </div>
           </div>
           <!--end item-->
         </div>
       </div>
       <!--end section holder 1-->
+
+      <div class="section_holder14">
+        <div class="container">
+          <h1 class="section_title">About Interview Saarthi</h1>
+          <div class="section_title_line"></div>
+          <p class="section_title_bottomtext">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+            Suspendisse et justo. Praesent mattis commodo augue. Aliquam ornare
+            hendrerit augue
+          </p>
+
+          <div class="one_half">
+            <div class="text_box active">
+              <div class="box_inner">
+                <div class="text">
+                  <ol style="color: white" class="list_st4">
+                    <li>Consectetuer adipiscing elit suspendisse</li>
+                    <li>Hendrerit augue Cras tellus In pulvinar</li>
+                    <li>Rutrum adipiscing luctus nisl magna</li>
+                    <li>Suspendisse imperdiet cursus nisi</li>
+                    <li>Consectetuer adipiscing elit suspendisse</li>
+                    <li>Rutrum adipiscing luctus nisl magna</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--end item-->
+
+          <div class="one_half last">
+            <!--end item-->
+
+            <div class="text_box">
+              <div style="border: 1px solid red" class="box_inner">
+                <!-- <div class="icon_holder">
+                  <div class="icon">
+                    <span
+                      class="glyph-item mega"
+                      aria-hidden="true"
+                      data-icon="&#xe060;"
+                      data-js-prompt="&amp;#xe005;"
+                    ></span>
+                  </div>
+                </div> -->
+                <div class="text">
+                  <ol class="list_st4">
+                    <li>Consectetuer adipiscing elit suspendisse</li>
+                    <li>Hendrerit augue Cras tellus In pulvinar</li>
+                    <li>Rutrum adipiscing luctus nisl magna</li>
+                    <li>Suspendisse imperdiet cursus nisi</li>
+                    <li>Consectetuer adipiscing elit suspendisse</li>
+                    <li>Rutrum adipiscing luctus nisl magna</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+            <!--end item-->
+          </div>
+          <!--end item-->
+
+          <!-- <div class="one_full">
+            <a class="readmore_but3" href="#">Readmore</a>
+            <a class="readmore_but4" href="#">Purchase now !</a>
+          </div> -->
+        </div>
+      </div>
+
+      <!-- End Section -->
 
       <div class="clearfix"></div>
       <div class="section_holder2">
@@ -1634,7 +1699,7 @@
                       </li>
                       <li class="iconbg active">
                         <a target="_blank" href="https://twitter.com/codelayers"
-                          ><i style="color: white;" class="fa fa-twitter"></i
+                          ><i style="color: white" class="fa fa-twitter"></i
                         ></a>
                       </li>
                       <li class="iconbg">
@@ -1704,7 +1769,7 @@
                       </li>
                       <li class="iconbg active">
                         <a target="_blank" href="https://twitter.com/codelayers"
-                          ><i style="color: white;" class="fa fa-twitter"></i
+                          ><i style="color: white" class="fa fa-twitter"></i
                         ></a>
                       </li>
                       <li class="iconbg">
@@ -1748,20 +1813,19 @@
         <div class="container">
           <h1 class="section_title two">Our Process</h1>
           <div class="section_title_line two"></div>
-          <p class="section_title_bottomtext">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-            Suspendisse et justo. Praesent mattis commodo augue. Aliquam ornare
-            hendrerit augue
-          </p>
+          <h3
+            style="color: black; font-weight: bold"
+            class="section_title_bottomtext"
+          >
+            Success Report
+          </h3>
           <div class="clearfix"></div>
           <div class="one_fourth">
             <div class="ucd_process">
               <div class="phaseimg"></div>
             </div>
-            <h4 class="padd_top2">The Analysis Phase</h4>
-            <p>
-              Lorem ipsum dolor sit amet dolor sit consectetuer adipiscing elit.
-            </p>
+            <h3 style="color: Black" class="padd_top2">Step 1</h3>
+            <p>Sigining With Right Package</p>
           </div>
           <!--end item-->
 
@@ -1769,10 +1833,8 @@
             <div class="ucd_process">
               <div class="phaseimg two"></div>
             </div>
-            <h4 class="padd_top2">The Design Phase</h4>
-            <p>
-              Lorem ipsum dolor sit amet dolor sit consectetuer adipiscing elit.
-            </p>
+            <h3 style="color: Black" class="padd_top2">Step 2</h3>
+            <p>Match making with Right Interviewer</p>
           </div>
           <!--end item-->
 
@@ -1780,10 +1842,8 @@
             <div class="ucd_process">
               <div class="phaseimg three"></div>
             </div>
-            <h4 class="padd_top2">Implementation Phase</h4>
-            <p>
-              Lorem ipsum dolor sit amet dolor sit consectetuer adipiscing elit.
-            </p>
+            <h3 style="color: Black" class="padd_top2">Step 3</h3>
+            <p>Mock Interview</p>
           </div>
           <!--end item-->
 
@@ -1791,10 +1851,8 @@
             <div class="ucd_process">
               <div class="phaseimg four"></div>
             </div>
-            <h4 class="padd_top2">Deployment Phase</h4>
-            <p>
-              Lorem ipsum dolor sit amet dolor sit consectetuer adipiscing elit.
-            </p>
+            <h3 style="color: Black" class="padd_top2">Step 4</h3>
+            <p>Feedback & reports 10 mint for quick Discussion</p>
           </div>
           <!--end item-->
         </div>
@@ -2432,21 +2490,24 @@
           </p>
           <div class="margin_top3"></div>
           <div class="price_table">
-            <div class="price_circle">$12</div>
+            <div class="price_circle">
+              ₹999 <span style="font-size: 18px">+Gst</span>
+            </div>
+
             <div class="top_shape"></div>
             <div class="plan_info_outer">
               <div class="plan_info">
-                <h2 class="title">Basic</h2>
+                <h4 class="title">Basic</h4>
                 <span>Monthly Plan</span>
                 <div class="bottom_line"></div>
                 <ul class="plan_features">
-                  <li>1 GB Bandwidth</li>
-                  <li>256 MB Memory</li>
-                  <li>24/7 Full Support</li>
-                  <li>Free Domain Name</li>
-                  <li>Money back Guarantee</li>
+                  <li>1 Interview</li>
+                  <li>Feed back/card</li>
+                  <li>Recording</li>
+                  <li>GAP Analysis</li>
+                  <!-- <li>Money back Guarantee</li> -->
                 </ul>
-                <a class="singup_but" href="#">Sing Up</a>
+                <a class="singup_but" href="#">Buy Now</a>
               </div>
             </div>
             <div class="bottom_shape"></div>
@@ -2454,21 +2515,23 @@
           <!--end item-->
 
           <div class="price_table active">
-            <div class="price_circle">$29</div>
+            <div class="price_circle">
+              ₹1299 <span style="font-size: 18px">+Gst</span>
+            </div>
             <div class="top_shape"></div>
             <div class="plan_info_outer">
               <div class="plan_info">
-                <h2 class="title">Standard</h2>
+                <h2 class="title">Basic + Mentoring</h2>
                 <span>Monthly Plan</span>
                 <div class="bottom_line"></div>
                 <ul class="plan_features">
-                  <li>1 GB Bandwidth</li>
-                  <li>256 MB Memory</li>
-                  <li>24/7 Full Support</li>
-                  <li>Free Domain Name</li>
-                  <li>Money back Guarantee</li>
+                  <li>1 on 1 Discussion</li>
+                  <li>How to fill GAP</li>
+                  <li>Industry View Point</li>
+                  <!-- <li>Free Domain Name</li>
+                  <li>Money back Guarantee</li> -->
                 </ul>
-                <a class="singup_but" href="#">Sing Up</a>
+                <a class="singup_but" href="#">Buy Now</a>
               </div>
             </div>
             <div class="bottom_shape"></div>
@@ -2476,21 +2539,23 @@
           <!--end item-->
 
           <div class="price_table">
-            <div class="price_circle">$58</div>
+            <div class="price_circle">
+              ₹1499 <span style="font-size: 18px">+Gst</span>
+            </div>
             <div class="top_shape"></div>
             <div class="plan_info_outer">
               <div class="plan_info">
-                <h2 class="title">Unlimited</h2>
+                <h2 class="title">Basic + Mentoring + Follow Up</h2>
                 <span>Monthly Plan</span>
                 <div class="bottom_line"></div>
                 <ul class="plan_features">
-                  <li>1 GB Bandwidth</li>
-                  <li>256 MB Memory</li>
-                  <li>24/7 Full Support</li>
-                  <li>Free Domain Name</li>
-                  <li>Money back Guarantee</li>
+                  <li>3 Interview</li>
+                  <li>follow up Feed back</li>
+                  <li>Resume + cover letter support</li>
+                  <!-- <li>Free Domain Name</li>
+                  <li>Money back Guarantee</li> -->
                 </ul>
-                <a class="singup_but" href="#">Sing Up</a>
+                <a class="singup_but" href="#">Buy Now</a>
               </div>
             </div>
             <div class="bottom_shape"></div>
@@ -2969,7 +3034,7 @@
                     target="_blank"
                     href="https://twitter.com/codelayers"
                     class="active"
-                    ><i style="color: white;" class="fa fa-twitter"></i
+                    ><i style="color: white" class="fa fa-twitter"></i
                   ></a>
                 </li>
                 <li>
