--- a/index copy.html
+++ b/index copy.html
@@ -460,7 +460,7 @@
                         </li>
                         <!--end elements styles-->
 
-                        <!-- <li class="dropdown yamm-fw">
+                        <li class="dropdown yamm-fw">
                           <a
                             href="#"
                             data-toggle="dropdown"
@@ -669,7 +669,7 @@
                               </div>
                             </li>
                           </ul>
-                        </li> -->
+                        </li>
                         <!-- <li class="dropdown">
                           <a href="about.html" class="dropdown-toggle">Pages</a>
                           <ul class="dropdown-menu multilevel" role="menu">
@@ -708,7 +708,7 @@
                         </li> -->
 
                         <!-- Dropdown dropdowns-->
-                        <!-- <li class="dropdown">
+                        <li class="dropdown">
                           <a href="portfolio-three.html" class="dropdown-toggle"
                             >Portfolio</a
                           >
@@ -747,12 +747,12 @@
                               >
                             </li>
                           </ul>
-                        </li> -->
+                        </li>
                         <!--end drop down-->
 
                         <!-- Dropdown dropdowns-->
-                        <!-- <li class="dropdown"> -->
-                        <!-- <a href="shop-fullwidth.html" class="dropdown-toggle"
+                        <li class="dropdown">
+                          <a href="shop-fullwidth.html" class="dropdown-toggle"
                             >Shop</a
                           >
                           <ul class="dropdown-menu five" role="menu">
@@ -773,23 +773,23 @@
                               >
                             </li>
                           </ul>
-                        </li> -->
+                        </li>
                         <!--end drop down-->
 
-                        <li>
-                          <a href="blog2.html">Blog</a>
-                          <!-- <ul class="dropdown-menu three" role="menu">
+                        <li class="dropdown">
+                          <a href="blog.html" class="dropdown-toggle">Blog</a>
+                          <ul class="dropdown-menu three" role="menu">
                             <li><a href="blog.html">Blog Full Width</a></li>
                             <li><a href="blog2.html">Blog 3Columns</a></li>
                             <li><a href="blog3.html">Blog Standard</a></li>
                             <li><a href="blog-post.html">Single Post</a></li>
-                          </ul> -->
+                          </ul>
                         </li>
-                        <li>
-                          <a href="contact2.html" class="dropdown-toggle"
+                        <li class="dropdown">
+                          <a href="contact.html" class="dropdown-toggle"
                             >Contact</a
                           >
-                          <!-- <ul class="dropdown-menu two" role="menu">
+                          <ul class="dropdown-menu two" role="menu">
                             <li>
                               <a href="contact.html">Contact Variation 1</a>
                             </li>
@@ -799,7 +799,7 @@
                             <li>
                               <a href="contact3.html">Contact Variation 3</a>
                             </li>
-                          </ul> -->
+                          </ul>
                         </li>
                       </ul>
                     </div>
@@ -816,6 +816,141 @@
         <div class="tp-banner2">
           <ul>
             <!-- SLIDE 1  -->
+            <li
+              data-transition="fade"
+              data-slotamount="1"
+              data-masterspeed="1500"
+              data-thumb="images/sliders/slider1_thumb.jpg"
+              data-delay="13000"
+              data-saveperformance="off"
+              data-title="Our Workplace"
+            >
+              <!-- MAIN IMAGE -->
+              <img
+                src="images/sliders/slider1_bg1.jpg"
+                alt="kenburns1"
+                data-bgposition="left center"
+                data-kenburns="on"
+                data-duration="14000"
+                data-ease="Linear.easeNone"
+                data-bgfit="100"
+                data-bgfitend="130"
+                data-bgpositionend="right center"
+              />
+              <!-- LAYERS -->
+
+              <div
+                class="tp-caption text1 sfr"
+                data-x="212"
+                data-hoffset="0"
+                data-voffset="-10"
+                data-y="167"
+                data-speed="800"
+                data-start="1000"
+                data-easing="Power4.easeOut"
+                data-endspeed="300"
+                data-endeasing="Power1.easeIn"
+                data-captionhidden="off"
+                style="z-index: 6"
+              >
+                Who
+              </div>
+              <div
+                class="tp-caption text2 sfl"
+                data-x="638"
+                data-hoffset="0"
+                data-voffset="-10"
+                data-y="232"
+                data-speed="800"
+                data-start="1800"
+                data-easing="Power4.easeOut"
+                data-endspeed="300"
+                data-endeasing="Power1.easeIn"
+                data-captionhidden="off"
+                style="z-index: 6"
+              >
+                Can Help me by taking
+              </div>
+              <div
+                class="tp-caption text3 sfr"
+                data-x="483"
+                data-hoffset="0"
+                data-voffset="-10"
+                data-y="298"
+                data-speed="800"
+                data-start="2100"
+                data-easing="Power4.easeOut"
+                data-endspeed="300"
+                data-endeasing="Power1.easeIn"
+                data-captionhidden="off"
+                style="z-index: 6"
+              >
+                Mock Interview
+              </div>
+              <div
+                class="tp-caption small_line1 sfr"
+                data-x="253"
+                data-hoffset="0"
+                data-voffset="-10"
+                data-y="429"
+                data-speed="800"
+                data-start="2400"
+                data-easing="Power4.easeOut"
+                data-endspeed="300"
+                data-endeasing="Power1.easeIn"
+                data-captionhidden="off"
+                style="z-index: 6"
+              ></div>
+              <div
+                class="tp-caption text4_small sfr"
+                data-x="328"
+                data-hoffset="0"
+                data-voffset="-10"
+                data-y="410"
+                data-speed="800"
+                data-start="2700"
+                data-easing="Power4.easeOut"
+                data-endspeed="300"
+                data-endeasing="Power1.easeIn"
+                data-captionhidden="off"
+                style="z-index: 6"
+              >
+                Lorem ipsum dolor sit amet, consectetuer <br />
+                adipiscing elit. Suspendisse et justo.
+              </div>
+              <div
+                class="tp-caption slider_but1 sfb"
+                data-x="660"
+                data-hoffset="0"
+                data-voffset="-10"
+                data-y="415"
+                data-speed="800"
+                data-start="3000"
+                data-easing="Power4.easeOut"
+                data-endspeed="300"
+                data-endeasing="Power1.easeIn"
+                data-captionhidden="off"
+                style="z-index: 6"
+              >
+                <a href="https://1.envato.market/nJev6">Get started</a>
+              </div>
+              <div
+                class="tp-caption slider_but2 sfb"
+                data-x="810"
+                data-hoffset="0"
+                data-voffset="-10"
+                data-y="415"
+                data-speed="800"
+                data-start="3300"
+                data-easing="Power4.easeOut"
+                data-endspeed="300"
+                data-endeasing="Power1.easeIn"
+                data-captionhidden="off"
+                style="z-index: 6"
+              >
+                <a href="https://1.envato.market/nJev6">Buy now !</a>
+              </div>
+            </li>
 
             <!-- SLIDE 3  -->
             <li
@@ -855,7 +990,7 @@
                 data-captionhidden="off"
                 style="z-index: 6"
               >
-                who can help me
+                We are Lemoni
               </div>
               <div
                 class="tp-caption text14 sfl"
@@ -871,7 +1006,7 @@
                 data-captionhidden="off"
                 style="z-index: 6"
               >
-                by taking
+                We create
               </div>
               <div
                 class="tp-caption text10 sfr"
@@ -887,7 +1022,7 @@
                 data-captionhidden="off"
                 style="z-index: 6"
               >
-                Mock Interviews
+                Unique Themes
               </div>
               <div
                 class="tp-caption slider_but4 sfb"
@@ -903,7 +1038,7 @@
                 data-captionhidden="off"
                 style="z-index: 6"
               >
-                <a href="#">Get started</a>
+                <a href="https://1.envato.market/nJev6">Get started</a>
               </div>
               <div
                 class="tp-caption slider_but2 sfb"
