--- a/form.html
+++ b/form.html
@@ -808,7 +808,7 @@
               id="sky-form"
               class="sky-form"
             >
-              <h2 class="uppercase"><strong>send us a message</strong></h2>
+              <!-- <h2 class="uppercase"><strong>send us a message</strong></h2> -->
               <fieldset>
                 <div class="row">
                   <section class="col col-6">
@@ -826,30 +826,95 @@
                     </label>
                   </section>
                 </div>
+                <div class="row">
+                  <section class="col col-6">
+                    <label class="label">Conact Number</label>
+                    <label class="input">
+                      <i class="icon-append icon-user"></i>
+                      <input type="number" name="name" id="name" />
+                    </label>
+                  </section>
+                  <section class="col col-6">
+                    <label class="label">Age</label>
+                    <label class="input">
+                      <i class="icon-append icon-envelope-alt"></i>
+                      <input type="number" name="email" id="email" />
+                    </label>
+                  </section>
+                </div>
                 <section>
-                  <label class="label">Subject</label>
+                  <label class="label">Last Qualification</label>
+                  <label class="input">
+                    <i class="icon-append icon-tag"></i>
+                    <input type="text" name="subject" id="subject" />
+                  </label>
+                </section>
+                <label class="label">Current Job</label>
+                <div class="row">
+                  <section class="col col-6">
+                    <label class="input">
+                      <i class="icon-append icon-user"></i>
+                      <input
+                        type="text"
+                        name="name"
+                        id="name"
+                        placeholder="position"
+                      />
+                    </label>
+                  </section>
+                  <section class="col col-6">
+                    <label class="input">
+                      <i class="icon-append icon-envelope-alt"></i>
+                      <input
+                        type="email"
+                        name="text"
+                        id="email"
+                        placeholder="company name"
+                      />
+                    </label>
+                  </section>
+                </div>
+                <section>
+                  <label class="label">Target Job</label>
                   <label class="input">
                     <i class="icon-append icon-tag"></i>
                     <input type="text" name="subject" id="subject" />
                   </label>
                 </section>
                 <section>
-                  <label class="label">Message</label>
-                  <label class="textarea">
-                    <i class="icon-append icon-comment"></i>
-                    <textarea rows="4" name="message" id="message"></textarea>
+                  <label class="label">Target Industry</label>
+                  <label class="input">
+                    <i class="icon-append icon-tag"></i>
+                    <input type="text" name="subject" id="subject" />
                   </label>
                 </section>
                 <section>
+                  <label class="label">Upload Resume</label>
+                  <label class="input">
+                    <i class="icon-append icon-tag"></i>
+                    <input type="file" name="subject" id="subject" />
+                  </label>
+                </section>
+                <div class="row">
+                  <section class="col col-6">
+                    <a class="button" href="">Explore Now</a>
+                    <!-- <button type="submit" class="button">Send message</button> -->
+                  </section>
+                  <section class="col col-6">
+                    <button type="submit" class="button">Pay Now</button>
+                  </section>
+                </div>
+
+                <!-- <section>
                   <label class="checkbox">
                     <input type="checkbox" name="copy" id="copy" />
                     <i></i>Send a copy to my e-mail address</label
                   >
-                </section>
+                </section> -->
               </fieldset>
-              <footer>
-                <button type="submit" class="button">Send message</button>
-              </footer>
+              <!-- <footer>
+                <button type="submit" class="button"></button>
+              </footer> -->
               <div class="message">
                 <i class="icon-ok"></i>
                 <p>Your message was successfully sent!</p>
